--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Pig Game</title>
   </head>
   <body>
+    <h3 class="myName">By: <a href="#">Thineshraj</a></h3>
     <main>
       <section class="player player--0 player--active">
         <h2 class="name" id="name--0">Player 1</h2>
